--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="Mehar Chaithanya - Full Stack Developer Portfolio showcasing web development projects and skills" />
     <meta name="keywords" content="web developer, full stack, portfolio, react, javascript" />
     <meta name="author" content="Mehar Chaithanya" />
